--- a/resume.template
+++ b/resume.template
@@ -13,15 +13,15 @@
 body {
 	font-size: 62.5%;
 	font-family: "Montserrat", sans-serif;
-	background-color: #171717;
-	color: #eeeeee;
+	background-color: #fff;
+	color: #131313;
 }
 .main-wrap {
 	max-width: 960px;
 	margin: 0 auto;
 }
 a {
-	color: #aaaaaa;
+	color: #131313;
 	text-decoration: none;
 	-webkit-transition: color 0.175s ease 0.05s;
 	   -moz-transition: color 0.175s ease 0.05s;
@@ -48,7 +48,7 @@ a:focus {
 	margin-right: 0.25em;
 }
 h1 {
-	color: #eeeeee;
+	color: #131313;
 	font-size: 2em;
 	margin: 1em 0 0;
 	text-transform: uppercase;
@@ -59,7 +59,7 @@ h2 {
 	text-transform: uppercase;
 }
 h3 {
-	color: #aaaaaa;
+	color: #4d4d4d;
 	font-size: 1.75em;
 	margin: 1em 0 0;
 }
@@ -81,11 +81,11 @@ h4 {
 }
 .contact-list li,
 .contact-list a {
-	color: #eeeeee;
+	color: #2b2b2b;
 }
 .contact-list a:hover,
 .contact-list a:focus {
-	color: #bbbbbb;
+	color: #777777;
 }
 .label {
 	margin-top: 0;
@@ -104,12 +104,12 @@ h4 {
 	margin-bottom: 0.5em;
 }
 p {
-	color: #aaaaaa;
+	color: #565656;
 	font-family: "Open Sans";
 	font-size: 1.5em;
 }
 li {
-	color: #aaaaaa;
+	color: #565656;
 	font-family: "Open Sans";
 	font-size: 1.5em;
 }
@@ -162,8 +162,8 @@ li {
 .list-set.keywords li {
 	background-color: #444444;
 	color: #eeeeee;
-	padding: 0.4em 0.5em;
-	font-size: 1.2em;
+	padding: 0.6em 0.85em;
+	font-size: 1.3em;
 	display: inline-block;
 	margin: 1px;
 	float: left;
@@ -430,7 +430,7 @@ blockquote .name {
 					{{#languages}}
 					<section class="section-sub section-sub-language">
 						<h3>{{language}}</h3>
-						<h4>Fluency: {{fluency}}</h4>
+						<p>Fluency: {{fluency}}</p>
 					</section>
 					{{/languages}}
 				</section>
