--- a/resume.template
+++ b/resume.template
@@ -116,10 +116,6 @@ li {
 .contact-list li {
 	display: inline-block;
 }
-.contact-list li:before {
-	content: ' | ';
-	padding: 0 0.25em;
-}
 .contact-list li:first-child:before {
 	content: '';
 }
@@ -307,13 +303,13 @@ blockquote .name {
 				<h3 class="label">{{basics.label}}</h3>
 				<ul id="contact" class="contact-list list-lines">
 				{{#phoneBool}}
-					<li class="contact-header">{{basics.phone}}</li>
+					<li class="contact-header">{{basics.phone}} | </li>
 				{{/phoneBool}}
 				{{#emailBool}}
 					<li class="contact-header"><a href="mailto:{{basics.email}}">{{basics.email}}</a></li>
 				{{/emailBool}}
 				{{#websiteBool}}
-					<li class="contact-header"><a href="{{basics.website}}">{{basics.website}}</a></li>
+					<li class="contact-header"><a href="{{basics.website}}"> | {{basics.website}}</a></li>
 				{{/websiteBool}}
 				</ul>
 				<ul id="profiles" class="profiles-list list-set">
@@ -354,8 +350,18 @@ blockquote .name {
 					<h2><i class="fa fa-graduation-cap left"></i>Education</h2>
 					{{#education}}
 					<section class="section-sub section-sub-education">
+						{{#studyType}}
 						<h3>{{studyType}} - {{institution}}</h3>
+						{{/studyType}}
+						{{#institution}}
+						<h3>{{institution}}</h3>
+						{{/institution}}
+						{{#endDate}}
 						<h4>{{startDateMonth}}{{startDateYear}} - {{endDateMonth}}{{endDateYear}}</h4>
+						{{/endDate}}
+						{{^endDate}}
+						<h4>- Forever</h4>
+						{{/endDate}}
 						<p>{{area}}</p>
 						{{#educationCourses}}
 						<h4>Courses</h4>
